# talk-jaxex-haskell-types

./: .gitignore  README.md  cabal.project  flake.nix  fourmolu.yaml  haskell-types-examples.cabal
doc/: notes.md  slides.md
slides/: notes.md  slides.md
src/: MyLib.hs
src/Development/Examples/: Basics.hs  ContactInfo.hs  Lists.hs  Parse.hs
