cabal-version:   3.0
name:            haskell-types-examples
version:         1.0.0.0
synopsis:        My talk for Jax.Ex: Programming with Types in Haskell

-- description:
homepage:        https://github.com/sgillespie/talk-jaxex-haskell-types
license:         CC0-1.0
license-file:    LICENSE
author:          Sean D Gillespie
maintainer:      sean@mistersg.net

-- copyright:
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:    base ^>=4.18.2.1
  hs-source-dirs:   src
  default-language: Haskell2010
