cabal-version:   3.0
name:            haskell-types-examples
version:         1.0.0.0
synopsis:        My talk for Jax.Ex: Programming with Types in Haskell
homepage:        https://github.com/sgillespie/talk-jaxex-haskell-types
license:         CC0-1.0
license-file:    LICENSE
author:          Sean D Gillespie
maintainer:      sean@mistersg.net
category:        Development
build-type:      Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Development.Examples.Basics
    Development.Examples.Lists
    Development.Examples.Parse
    Development.Examples.ContactInfo
  build-depends:
    base ^>=4.18.2.1,
    containers,
    extra
  hs-source-dirs:   src
  default-language: Haskell2010
